Add nav collection for pages.

--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -1,3 +1,16 @@
 tree:
   -
     entry: home
+  -
+    entry: 00881a63-f013-4c6f-8b0e-72970a24f0c6
+  -
+    entry: d93b2443-b3bc-4c13-ba9d-45494bde50d2
+  -
+    entry: e73a9bfa-c957-4580-bcf4-ca384fbfe703
+    children:
+      -
+        entry: ad02080d-542f-4600-b912-0276f30584a0
+      -
+        entry: fa6fa151-0036-416b-8fdd-e204a437404b
+      -
+        entry: 14012362-47c0-4023-8bbb-6652f9a5c6a3
