Add some field for tag

--- a/content/taxonomies/tags/packages.yaml
+++ b/content/taxonomies/tags/packages.yaml
@@ -1,1 +1,5 @@
 title: Packages
+emoji: 📦
+content: 'There are some packages.'
+updated_by: 7cee2795-4b4b-4cc4-b699-ca005d4619fd
+updated_at: 1640279076
