--- a/content/taxonomies/tags/sponsor.yaml
+++ b/content/taxonomies/tags/sponsor.yaml
@@ -1,4 +1,6 @@
 title: Sponsor
 updated_by: 7cee2795-4b4b-4cc4-b699-ca005d4619fd
-updated_at: 1640278166
+updated_at: 1640279166
 blueprint: tags
+emoji: 😘
+content: 'Thanks for your sponsor'
