--- a/users/q.curder@gmail.com.yaml
+++ b/users/q.curder@gmail.com.yaml
@@ -2,7 +2,7 @@ name: Curder
 super: true
 avatar: my-cover.jpeg
 id: 7cee2795-4b4b-4cc4-b699-ca005d4619fd
-password_hash: $2y$10$/XbGv5WpVrPfjBartjp1P.gv9onDWcD5lykvklTKYFkqqyv0P6RBe
+password_hash: $2y$10$UQ7H.rvj7SPVlHbkvcm2qut1cL8OKnt0SEmIu9Jd.y5NI5qop7/Oe
 preferences:
   collections:
     blog:
